# hacknation-zus

./: .gitignore  README.md  docker-compose.yml  karta_wypadku.md  koniec.txt  package-lock.json  poczatek.txt  pytanie1.txt  pytanie2.txt  pytanie3.txt  pytanie4.txt  srodek.txt  wzor.txt
ZUS Accident Notification Tool/: Dockerfile  index.html  package-lock.json  package.json  theme.js  urzednik.html  vite.config.ts
ZUS Accident Notification Tool/data/: pkd.json
ZUS Accident Notification Tool/src/: App.css  App.tsx  index.css  main-official.tsx  tailwind.config.js  types.ts
ZUS Accident Notification Tool/src/chat/: ConversationalForm.tsx  TextMessage.tsx
ZUS Accident Notification Tool/src/components/chat/: ChatMessage.tsx  ConversationalForm.tsx
ZUS Accident Notification Tool/src/components/form/: FormSection.tsx  FormView.tsx  InputField.tsx
ZUS Accident Notification Tool/src/components/official_helper/: OfficialView.tsx
ZUS Accident Notification Tool/src/config/: formConfig.ts
ZUS Accident Notification Tool/src/context/: ChatContext.tsx
ZUS Accident Notification Tool/src/hooks/: useAccidentAnalysis.ts  useChatInterface.ts  useFormSync.ts  useInputLogic.ts
ZUS Accident Notification Tool/src/utils/: formHelpers.ts  validation.ts
ZUS Accident Notification Tool/src/zus_form/: FormSection.tsx  InputSection.tsx  Interfaces.tsx  ZusForm.tsx  formConfig.ts  mockData.ts
backend/: .dockerignore  .env.example  Dockerfile  check_fields.py  debug_pdf.py  main.py  ocr.py  pyproject.toml
