[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.123.10",
    "langchain>=1.1.2",
    "langchain-google-genai>=2.0.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "uvicorn>=0.38.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
]

[tool.setuptools]
py-modules = ["main", "ocr"]

[tool.uv]
package = true
